# AICourse

./: .editorconfig  .env.development  .env.example  .env.mygit  .env.mygit.example  .env.production  .env.test  .eslintignore  .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  bun.config.ts  bunfig.toml  index.html  package-lock.json  package.json  playwright.api.config.ts  playwright.browser.config.ts  playwright.browser.schedule.config.ts  playwright.config.ts  playwright.frontend.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit  pre-push
.kiro/steering/: project-rules.md
backups/: .gitkeep
config/: README.md  default.ts  development.ts  index.ts  production.ts  test.ts
data/: .gitkeep  README.md  schedule.db-shm  schedule.db-wal  测试数据.json  测试数据.xlsx
docs/: README.md  bun-runtime-guide.md  course.md  quick-start.md
docs/api/: .gitkeep
docs/architecture/: .gitkeep  project-structure.md
docs/development/: .gitkeep  code-formatting-guide.md  dev-tools-guide.md  frontend-logger-guide.md  git-hooks-guide.md  git-hooks-test.md  hono-setup-verification.md  logging-config-comparison.md  logging-configuration.md  logging-guide.md  mygit-guide.md  mygit-implementation-summary.md  mygit-simple-guide.md  playwright-setup.md  quick-start.md  service-logger-guide.md  task-1.1.5-summary.md  task-1.3.3-summary.md  task-1.3.4-summary.md  task-1.3.5-summary.md  task-1.4.1-summary.md  task-1.4.2-summary.md  task-1.4.3-summary.md  task-1.4.5-summary.md  tauri-dev-server-setup.md  tauri-v2-upgrade-guide.md  typescript-eslint-config.md  vite-config-setup.md  vitest-setup.md  vue3-initialization.md
docs/user-manual/: .gitkeep
playwright-report/: index.html
scripts/: check-schedule-display.ts  generate-test-data-with-dictionaries.ts  generate-test-data.ts  kill-ports.ts  mygit-simple.ts  upgrade-tauri-v2.sh  verify-bun-config.ts  verify-config.ts  verify-frontend.ts  verify-hono.ts  verify-playwright.ts  verify-tauri-config.ts  verify-tauri-v2.ts  verify-teacher-names.ts  verify-test-data.ts  verify-ts-eslint-config.sh
scripts/mygit/: README.md  ai-service.ts  git-service.ts  index.ts  logger.ts  test-mygit.ts  types.ts  ui.ts
src/: App.vue  README.md  auto-imports.d.ts  components.d.ts  main.ts  vite-env.d.ts
src-service/: index.ts
src-service/algorithm/: scheduler.ts
src-service/db/: database-logger.ts  database.ts  repositories.ts
src-service/middleware/: .gitkeep  error-handler.test.ts  error-handler.ts  file-download.test.ts  file-download.ts  file-upload.test.ts  file-upload.ts  request-logger.test.ts  request-logger.ts
src-service/routes/: .gitkeep  clear-data.ts  data.ts  import-export.test.ts  import-export.ts  schedule.test.ts  schedule.ts  teacher.ts
src-service/services/: .gitkeep  excel-parser.ts  import-export-service.test.ts  import-export-service.ts  schedule-service.test.ts  schedule-service.ts  teacher-service.test.ts  teacher-service.ts
src-service/types/: hono.ts
src-service/utils/: .gitkeep  business-rules.test.ts  business-rules.ts  logger.test.ts  logger.ts  template-generator.ts  validators.test.ts  validators.ts
src-tauri/: Cargo.toml  README.md  WORKSPACE.md  build.rs  rustfmt.toml  tauri.conf.json  tauri.conf.json.md
src-tauri/.cargo/: config.toml
src-tauri/icons/: README.md
src-tauri/migrations/: 20240101_000000_initial_schema.sql  README.md  template.sql
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/algorithm/: cost_cache.rs  mod.rs  schedule_hash.rs  solver.rs  solver_backtrack_tests.rs  solver_cost_tests.rs  solver_hard_constraints_tests.rs  solver_performance_tests.rs  solver_teacher_exclusion_tests.rs  solver_venue_capacity_tests.rs  types.rs
src-tauri/src/commands/: .gitkeep  health.rs  import_export.rs  logging.rs  mod.rs  schedule.rs  teacher.rs
src-tauri/src/db/: .gitkeep  class.rs  class_test.rs  curriculum.rs  curriculum_test.rs  exclusion.rs  exclusion_test.rs  fixed_course.rs  fixed_course_test.rs  history.rs  history_test.rs  manager_test.rs  migrations.rs  migrations_example.md  migrations_test.rs  mod.rs  schedule.rs  schedule_test.rs  subject.rs  subject_test.rs  teacher.rs  teacher_test.rs  venue.rs  venue_test.rs
src-tauri/src/models/: .gitkeep  mod.rs  timeslot_tests.rs
src-tauri/src/solver/: .gitkeep  conflict_detector.rs  conflict_detector_tests.rs  mod.rs  swap_suggester.rs
src-tauri/tests/: db_connection_test.rs  db_crud_test.rs  db_integrity_test.rs  db_performance_test.rs  db_transaction_test.rs  logging_integration_test.rs
src/api/: .gitkeep  data.ts  http.ts  importExport-enhanced.ts  importExport.ts  schedule.ts  teacher.ts
src/composables/: useDraggableSchedule.ts  useHistory.ts  useSearch.ts
src/router/: index.ts
src/stores/: .gitkeep  classStore.ts  configStore.ts  curriculumStore.ts  dataStore.ts  dictionaryStore.ts  dictionaryStore.ts.backup  gradeStore.ts  scheduleStore.ts  teacherStore.ts  uiStore.ts
src/styles/: .gitkeep  index.css
src/types/: global.d.ts
src/utils/: .gitkeep  datetime.test.ts  datetime.ts  debounce.test.ts  debounce.ts  errorHandler.test.ts  errorHandler.ts  file-logger.ts  format.test.ts  format.ts  logger.test.ts  logger.ts  storage.test.ts  storage.ts  validators.ts
src/views/: .gitkeep  Curriculum.vue  DebugStore.vue  Dictionary.vue  Help.vue  Home.vue  ImportExport.vue  NotFound.vue  Schedule.vue  Settings.vue  Statistics.vue  Teacher.vue
test-results/: .last-run.json
test-results/template-download-browser-模板下载功能测试（浏览器模式）-用例-2-验证浏览器模式下载触发-chromium/: error-context.md  video.webm
test-results/template-download-browser-模板下载功能测试（浏览器模式）-用例-4-验证错误处理-chromium/: video.webm
tests/: .gitignore  README.md  run-download-tests.sh  run-import-tests.sh  run-schedule-generation-export-test.sh  run-template-tests.sh
tests/downloads/: 排课系统导入模板.xlsx
tests/fixtures/: .gitkeep  test-fixtures.ts
tests/helpers/: .gitkeep  custom-reporter.ts  database-helper.ts  global-setup.ts  global-teardown.ts  test-assertions.ts  test-data-generator.ts  test-logger.ts  (+1 more)
(+112 files in other folders)
