# ============================================================================
# 排课系统 Rust 后端配置
# ============================================================================
# 本项目采用 Rust + Tauri 架构，实现高性能的约束求解和调课引擎
# 主要模块：
# - solver: 约束求解器，实现回溯搜索和代价函数计算
# - db: 数据访问层，封装 SQLite 数据库操作
# - models: 数据模型定义，包含课表、教师、班级等结构
# - commands: Tauri 命令接口，提供前端调用的 API
# ============================================================================

[package]
name = "course-scheduling-system"
version = "0.1.0"
description = "排课系统 Rust 后端 - 基于约束优化的智能课程调度系统"
authors = ["Course Scheduling Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"  # 最低支持的 Rust 版本

# ============================================================================
# 工作空间配置
# ============================================================================
# 当前项目采用单一 crate 结构，模块组织如下：
# - src/commands/  : Tauri 命令接口，提供前端调用的 API
# - src/db/        : 数据访问层，封装 SQLite 数据库操作
# - src/models/    : 数据模型定义，包含课表、教师、班级等结构
# - src/solver/    : 约束求解器核心，实现回溯搜索和代价函数计算
#
# 未来扩展方案：
# 如果模块复杂度增加，可将各模块拆分为独立的 crate，使用工作空间管理：
# [workspace]
# members = [
#     ".",                # 主应用 crate
#     "crates/solver",    # 约束求解器核心（可独立测试和发布）
#     "crates/db",        # 数据访问层（可独立测试）
#     "crates/models",    # 数据模型（可被多个 crate 共享）
# ]
#
# 工作空间优势：
# - 共享依赖版本，减少编译时间
# - 模块间清晰的依赖关系
# - 独立的测试和文档
# - 支持增量编译和并行构建
# ============================================================================

# ============================================================================
# 构建依赖
# ============================================================================

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ============================================================================
# 运行时依赖
# ============================================================================

[dependencies]
# ----------------------------------------------------------------------------
# Tauri 框架 - 提供桌面应用框架和 IPC 通信
# ----------------------------------------------------------------------------
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

# ----------------------------------------------------------------------------
# 序列化和反序列化 - 用于数据传输和存储
# ----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ----------------------------------------------------------------------------
# 日志框架 - 结构化日志记录
# ----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"  # 日志文件轮转

# ----------------------------------------------------------------------------
# 数据库 - SQLite 数据持久化
# ----------------------------------------------------------------------------
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",  # 异步运行时
    "sqlite",                     # SQLite 数据库
    "migrate"                     # 数据库迁移
] }
tokio = { version = "1", features = ["full"] }

# ----------------------------------------------------------------------------
# 错误处理 - 统一的错误类型和传播
# ----------------------------------------------------------------------------
anyhow = "1.0"      # 灵活的错误处理
thiserror = "1.0"   # 自定义错误类型派生

# ----------------------------------------------------------------------------
# 日期时间处理
# ----------------------------------------------------------------------------
chrono = { version = "0.4", features = ["serde"] }

# ----------------------------------------------------------------------------
# Excel 文件处理 - 用于导入导出功能
# ----------------------------------------------------------------------------
rust_xlsxwriter = "0.60"
calamine = "0.24"  # Excel 文件读取

# ----------------------------------------------------------------------------
# 并行计算 - 用于性能优化
# ----------------------------------------------------------------------------
rayon = "1.8"

# ----------------------------------------------------------------------------
# 哈希映射 - 高性能的哈希表实现
# ----------------------------------------------------------------------------
hashbrown = "0.14"

# ----------------------------------------------------------------------------
# 正则表达式 - 用于敏感信息过滤
# ----------------------------------------------------------------------------
regex = "1.10"

# ============================================================================
# 开发依赖 - 仅在测试和开发时使用
# ============================================================================

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
# 断言库
pretty_assertions = "1.4"
# 临时文件
tempfile = "3.8"

# ============================================================================
# 编译特性配置
# ============================================================================

[features]
# 默认特性
default = []

# 开发模式特性（启用额外的调试信息）
dev = []

# 性能分析特性（启用性能监控和分析工具）
profiling = []

# 并行计算特性（启用 Rayon 并行优化）
parallel = []

# 扩展周期支持（支持超过 5 天的排课周期）
extended-cycle = []

# ============================================================================
# 性能优化配置
# ============================================================================

# 发布构建配置 - 最大化性能和最小化体积
[profile.release]
panic = "abort"         # 发生 panic 时直接终止，减小二进制体积
codegen-units = 1       # 单个代码生成单元，启用更好的优化
lto = true              # 链接时优化，提升性能
opt-level = "z"         # 优化体积（"z" 比 "s" 更激进）
strip = true            # 移除调试符号，减小体积

# 开发构建配置 - 快速编译
[profile.dev]
opt-level = 0           # 不优化，加快编译速度
debug = true            # 包含调试信息
split-debuginfo = "unpacked"  # 调试信息分离，加快链接速度

# 测试构建配置
[profile.test]
opt-level = 0           # 不优化测试代码
debug = true            # 包含调试信息

# ============================================================================
# Cargo 配置
# ============================================================================

# 增量编译（开发时加速）
[profile.dev.package."*"]
opt-level = 0

# 依赖项优化（即使在 dev 模式下也优化依赖）
[profile.dev.package.sqlx]
opt-level = 2

[profile.dev.package.serde]
opt-level = 2

[profile.dev.package.serde_json]
opt-level = 2
