# ============================================================================
# 排课系统 Tauri 桌面应用配置
# ============================================================================
# Tauri 仅作为桌面应用打包工具，不包含业务逻辑
# 所有业务逻辑通过 Hono 后端服务实现
# ============================================================================

[package]
name = "course-scheduling-system"
version = "0.1.0"
description = "排课系统桌面应用 - 基于 Tauri 的跨平台桌面应用容器"
authors = ["Course Scheduling Team"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

# ============================================================================
# 构建依赖
# ============================================================================

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ============================================================================
# 运行时依赖
# ============================================================================

[dependencies]
# Tauri 框架 - 提供桌面应用框架
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# 序列化 - 用于系统信息返回
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================================================
# 性能优化配置
# ============================================================================

# 发布构建配置
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# 开发构建配置
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
